manifest/deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-deployment
  labels:
    app: argo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: argo
  template:
    metadata:
      labels:
        app: argo
    spec:
      containers:
      - name: argo-test
        image: 487383300987.dkr.ecr.us-east-1.amazonaws.com/eks
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
