manifest/deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-deployment-2
  labels:
    app: argo-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: argo-2
  template:
    metadata:
      labels:
        app: argo-2
    spec:
      containers:
      - name: argo-test-2
        image: 487383300987.dkr.ecr.us-east-1.amazonaws.com/test
        ports:
        - containerPort: 80
