manifest/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-service
spec:
  selector:
    app: argo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
