manifest/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-service-2
spec:
  selector:
    app: argo-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
