manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vj-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:487383300987:certificate/8dd54571-d95c-4cbe-b004-79d8a73985bc
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  tls:
  - hosts:
    - vijay.klizos.com
  rules:
  - host: vijay.klizos.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-service
            port:
              number: 80
      - path: /batman
        pathType: Prefix
        backend:
          service:
            name: argo-service-2
            port:
              number: 80
